# bullet

./: .gitignore
crates/bullet_core/src/graph/: builder.rs
crates/bullet_hip_backend/kernels/: argmax.cu
crates/bullet_lib/: Cargo.toml
crates/bullet_lib/src/: policy.rs  trainer.rs  value.rs
crates/bullet_lib/src/trainer/: settings.rs
crates/bullet_lib/src/value/loader/: viribinpack.rs
examples/: Chess192.rs  simple.rs
examples/plenty/: 0102rr4.rs  0102rr5.rs  0102rr6.rs  0105rr2r2.rs  0107rr2.rs  0107rr3.rs  0107rr3r10.rs  0107rr3r11.rs  0107rr3r2.rs  0108.rs  0110.rs  0113.rs  0115.rs  0116.rs  0117rr2r.rs  0118.rs  0120.rs  0121.rs  0122.rs  0123rrr4.rs  0124.rs  0125.rs  0126.rs  0126rrr3.rs  0128.rs  0129.rs  0129r2.rs  0131.rs  0134-2r10.rs  0134-2r11.rs  0134-2r12.rs  0134-2r13.rs  0134-2r14.rs  0134-2r15.rs  0134-2r16.rs  0134-2r17.rs  0134-2r18.rs  0134-2r19.rs  0134-2r2.rs  0134-2r20.rs  (+96 more)
examples/plenty/old/: 0092r5r.rs  0102.rs  0102rr2.rs  0102rr3.rs  0102rr5.rs  0105.rs  0105rr2r.rs  0106.rs  0107.rs  0107rr3r.rs  0107rr3r12.rs  0107rr3r13.rs  0107rr3r3.rs  0107rr3r4.rs  0107rr3r5.rs  0107rr3r6.rs  0107rr3r7.rs  0107rr3r8.rs  0107rr3r9.rs  0108.rs  0109.rs  0109rr2r.rs  0109rrr2.rs  0109rrr3.rs  0109rrr4.rs  0109rrr5.rs  0110.rs  0111.rs  0112.rs  0114.rs  0117.rs  0118.rs  0118rrr2.rs  0119.rs  0119rr2.rs  0120.rs  0123.rs  0123rrr2.rs  0123rrr3.rs  0126rrr2.rs  (+9 more)
