[package]
name = "bullet_lib"
version = "1.0.0"
description = "Neural Network Trainer"
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }

[features]
default = ["cuda"]
cpu = []
cuda = ["bullet_cuda_backend"]
hip = ["bullet_hip_backend", "bullet_hip_backend/hip", "bullet_cuda_backend?/error"]
hip-cuda = ["bullet_hip_backend"]
multigpu = ["bullet_cuda_backend/nccl"]

[dependencies]
acyclib = { workspace = true }
bullet_cuda_backend = { workspace = true, optional = true }
bullet_hip_backend = { workspace = true, optional = true }
bulletformat = { workspace = true }
montyformat = { workspace = true }
sfbinpack = "0.6.0"
viriformat = { workspace = true }
regex = "1.11.1"
rayon = "1.10.0"
rand = "0.9.1"
once_cell = "1.21.3"
rand_chacha = "0.9.0"

[[example]]
name = "0092r5r"
path = "../../examples/plenty/0092r5r.rs"

[[example]]
name = "0102"
path = "../../examples/plenty/0102.rs"

[[example]]
name = "0102rr2"
path = "../../examples/plenty/0102rr2.rs"

[[example]]
name = "0102rr3"
path = "../../examples/plenty/0102rr3.rs"

[[example]]
name = "0102rr4"
path = "../../examples/plenty/0102rr4.rs"

[[example]]
name = "0102rr5"
path = "../../examples/plenty/0102rr5.rs"

[[example]]
name = "0102rr6"
path = "../../examples/plenty/0102rr6.rs"

[[example]]
name = "0104"
path = "../../examples/plenty/0104.rs"

[[example]]
name = "0105"
path = "../../examples/plenty/0105.rs"

[[example]]
name = "0105rr2r"
path = "../../examples/plenty/0105rr2r.rs"

[[example]]
name = "0105rr2r2"
path = "../../examples/plenty/0105rr2r2.rs"

[[example]]
name = "0106"
path = "../../examples/plenty/0106.rs"

[[example]]
name = "0107"
path = "../../examples/plenty/0107.rs"

[[example]]
name = "0107rr2"
path = "../../examples/plenty/0107rr2.rs"

[[example]]
name = "0107rr3"
path = "../../examples/plenty/0107rr3.rs"

[[example]]
name = "0107rr3r"
path = "../../examples/plenty/0107rr3r.rs"

[[example]]
name = "0107rr3r2"
path = "../../examples/plenty/0107rr3r2.rs"

[[example]]
name = "0107rr3r3"
path = "../../examples/plenty/0107rr3r3.rs"

[[example]]
name = "0107rr3r4"
path = "../../examples/plenty/0107rr3r4.rs"

[[example]]
name = "0107rr3r5"
path = "../../examples/plenty/0107rr3r5.rs"

[[example]]
name = "0107rr3r6"
path = "../../examples/plenty/0107rr3r6.rs"

[[example]]
name = "0107rr3r7"
path = "../../examples/plenty/0107rr3r7.rs"

[[example]]
name = "0107rr3r8"
path = "../../examples/plenty/0107rr3r8.rs"

[[example]]
name = "0107rr3r9"
path = "../../examples/plenty/0107rr3r9.rs"

[[example]]
name = "0107rr3r10"
path = "../../examples/plenty/0107rr3r10.rs"

[[example]]
name = "0107rr3r11"
path = "../../examples/plenty/0107rr3r11.rs"

[[example]]
name = "0107rr3r12"
path = "../../examples/plenty/0107rr3r12.rs"

[[example]]
name = "0107rr3r13"
path = "../../examples/plenty/0107rr3r13.rs"

[[example]]
name = "0108"
path = "../../examples/plenty/0108.rs"

[[example]]
name = "0109"
path = "../../examples/plenty/0109.rs"

[[example]]
name = "0109rrr2"
path = "../../examples/plenty/0109rrr2.rs"

[[example]]
name = "0109rrr3"
path = "../../examples/plenty/0109rrr3.rs"

[[example]]
name = "0109rrr4"
path = "../../examples/plenty/0109rrr4.rs"

[[example]]
name = "0109rrr5"
path = "../../examples/plenty/0109rrr5.rs"

[[example]]
name = "0109rr2r"
path = "../../examples/plenty/0109rr2r.rs"

[[example]]
name = "0110"
path = "../../examples/plenty/0110.rs"

[[example]]
name = "0111"
path = "../../examples/plenty/0111.rs"

[[example]]
name = "0112"
path = "../../examples/plenty/0112.rs"

[[example]]
name = "0113"
path = "../../examples/plenty/0113.rs"

[[example]]
name = "0114"
path = "../../examples/plenty/0114.rs"

[[example]]
name = "0115"
path = "../../examples/plenty/0115.rs"

[[example]]
name = "0117"
path = "../../examples/plenty/0117.rs"

[[example]]
name = "0117rr2r"
path = "../../examples/plenty/0117rr2r.rs"

[[example]]
name = "0118"
path = "../../examples/plenty/0118.rs"

[[example]]
name = "0118rrr2"
path = "../../examples/plenty/0118rrr2.rs"

[[example]]
name = "0119"
path = "../../examples/plenty/0119.rs"

[[example]]
name = "0119rr2"
path = "../../examples/plenty/0119rr2.rs"

[[example]]
name = "0120"
path = "../../examples/plenty/0120.rs"

[[example]]
name = "0122"
path = "../../examples/plenty/0122.rs"

[[example]]
name = "0123"
path = "../../examples/plenty/0123.rs"

[[example]]
name = "0123rrr2"
path = "../../examples/plenty/0123rrr2.rs"

[[example]]
name = "0123rrr3"
path = "../../examples/plenty/0123rrr3.rs"

[[example]]
name = "0123rrr4"
path = "../../examples/plenty/0123rrr4.rs"

[[example]]
name = "0124"
path = "../../examples/plenty/0124.rs"

[[example]]
name = "0125"
path = "../../examples/plenty/0125.rs"

[[example]]
name = "0126"
path = "../../examples/plenty/0126.rs"

[[example]]
name = "0126rrrr"
path = "../../examples/plenty/0126rrrr.rs"

[[example]]
name = "0126rrr2"
path = "../../examples/plenty/0126rrr2.rs"

[[example]]
name = "0126rrr3"
path = "../../examples/plenty/0126rrr3.rs"

[[example]]
name = "0126rrr4"
path = "../../examples/plenty/0126rrr4.rs"

[[example]]
name = "0126rrr5"
path = "../../examples/plenty/0126rrr5.rs"

[[example]]
name = "0126rrr6"
path = "../../examples/plenty/0126rrr6.rs"

[[example]]
name = "0127"
path = "../../examples/plenty/0127.rs"

[[example]]
name = "0128"
path = "../../examples/plenty/0128.rs"

[[example]]
name = "0129"
path = "../../examples/plenty/0129.rs"

[[example]]
name = "0130"
path = "../../examples/plenty/0130.rs"

[[example]]
name = "0131"
path = "../../examples/plenty/0131.rs"

[[example]]
name = "threats-kingbuckets"
path = "../../examples/plenty/threats-kingbuckets.rs"

[[example]]
name = "pgn-to-viriformat"
path = "../../examples/plenty/pgn-to-viriformat.rs"

[[example]]
name = "simple"
path = "../../examples/simple.rs"

[[example]]
name = "mnist"
path = "../../examples/extra/mnist.rs"

[[example]]
name = "test1"
path = "../../examples/tests/test1.rs"

[[example]]
name = "test2"
path = "../../examples/tests/test2.rs"

[[example]]
name = "test3"
path = "../../examples/tests/test3.rs"

[[example]]
name = "1_simple"
path = "../../examples/progression/1_simple.rs"

[[example]]
name = "2_output_buckets"
path = "../../examples/progression/2_output_buckets.rs"

[[example]]
name = "3_input_buckets"
path = "../../examples/progression/3_input_buckets.rs"

[[example]]
name = "4_multi_layer"
path = "../../examples/progression/4_multi_layer.rs"

[[example]]
name = "relabel"
path = "../../examples/extra/relabel.rs"
